test/compile_failure/02_undeclared_identifier.c
// EXPECT-ERRORS: 1
// EXPECT: use of undeclared identifier 'missing'
int main() {
    return missing;
}
